--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: <p align="center"> Aisharya Ravichandran</p>
-logo: /assets/img/logo.png
+logo: /assets/img/PXL_20211204_133201101.NIGHT.jpg
 
 description:
   <p align="center">
