--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ description:
   <a href="https://github.com/Aisharya16">GitHub</a>
   
   <br>   
-    I am working as Application analyst for Anthem Digital platform
-    Worked on supporting various technolies like APIGEE, REST and WeB services, docker, mongodb
-    Worked on various tools like Splunk, ServiceNow, Jira
-  <br>
+    I am working as Application analyst for Anthem Digital platform <br>
+    Worked on supporting various technolies like APIGEE, REST and WeB services, docker, mongodb<br>
+    Worked on various tools like Splunk, ServiceNow, Jira<br>
+  
   </p>
 
 
