--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 title: <p align="center"> Aisharya Ravichandran</p>
-logo: /assets/img/Screenshot 2022-03-29 193739.png
+logo: /assets/img/profile_pic.png
 
 description:
   <p align="center">
